--- a/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewStatementView.scala.html
+++ b/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewStatementView.scala.html
@@ -1,11 +1,23 @@
-@(targetCall: play.api.mvc.Call, statement: String, config: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingConfig)
+@(targetCall: play.api.mvc.Call, name: String, statement: String, config: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingConfig)
 
 @import play.i18n.Messages
+@import org.iatoki.judgels.gabriel.LanguageRegistry
+
+@if(play.mvc.Controller.flash("submissionError") != null) {
+    <div class="alert alert-danger" role="alert">@{play.mvc.Controller.flash("submissionError")}</div>
+}
+
+<h2 class="text-center">@name</h2>
+
+<p class="text-center">Time limit: @config.getTimeLimitInMilliseconds ms</p>
+<p class="text-center">Memory limit: @config.getMemoryLimitInKilobytes KB</p>
+
+<p>&nbsp;</p>
 
 @Html(statement)
 
 <hr />
-<h4>Submit solution</h4>
+<h4>Submit Solution</h4>
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-2", "col-md-10") }
 
 @b3.form(targetCall, 'enctype->"multipart/form-data") {
@@ -19,6 +31,17 @@
             </div>
         </div>
     }
+
+    <div class="form-group">
+        <label for="language" class="col-sm-2 control-label">Language</label>
+        <div class="col-sm-10">
+            <select name="language">
+                @for((k, v) <- LanguageRegistry.getInstance().getGradingLanguages) {
+                    <option value="@k">@v</option>
+                }
+            </select>
+        </div>
+    </div>
 
     @b3.submit('class -> "btn btn-primary") { @Messages.get("Submit") }
 }
