--- a/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewStatementView.scala.html
+++ b/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewStatementView.scala.html
@@ -1,7 +1,7 @@
 @(targetCall: play.api.mvc.Call, name: String, statement: String, config: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingConfig)
 
 @import play.i18n.Messages
-@import org.iatoki.judgels.gabriel.LanguageRegistry
+@import org.iatoki.judgels.gabriel.GradingLanguageRegistry
 
 @if(play.mvc.Controller.flash("submissionError") != null) {
     <div class="alert alert-danger" role="alert">@{play.mvc.Controller.flash("submissionError")}</div>
@@ -23,11 +23,11 @@
 @b3.form(targetCall, 'enctype->"multipart/form-data") {
     @helper.CSRF.formField
 
-    @for(key <- config.getRequiredSourceFileKeys) {
+    @for((k, v) <- config.getSourceFileFields) {
         <div class="form-group">
-            <label for="@key" class="col-md-2">@key</label>
+            <label for="@k" class="col-md-2">@v</label>
             <div class="col-md-10">
-                <input type="file" name="@key">
+                <input type="file" name="@k">
             </div>
         </div>
     }
@@ -36,7 +36,7 @@
         <label for="language" class="col-sm-2 control-label">Language</label>
         <div class="col-sm-10">
             <select name="language">
-                @for((k, v) <- LanguageRegistry.getInstance().getGradingLanguages) {
+                @for((k, v) <- GradingLanguageRegistry.getInstance().getGradingLanguages) {
                     <option value="@k">@v</option>
                 }
             </select>
