Add source file field keys to statement to check empty file inputs

--- a/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewSubmissionView.scala.html
+++ b/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewSubmissionView.scala.html
@@ -46,7 +46,7 @@
             <pre>@sourceFile.getContent</pre>
             <p>Compilation Output:</p>
             @if(details != null) {
-                <pre>@details.getCompilationOutput.get(key)</pre>
+                <pre>@details.getCompilationOutputs.get(key)</pre>
             }else{
                 <p>(Not compiled yet)</p>
             }
