--- a/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewStatementView.scala.html
+++ b/app/org/iatoki/judgels/commons/views/adapters/blackBoxViewStatementView.scala.html
@@ -2,6 +2,7 @@
 
 @import play.i18n.Messages
 @import org.iatoki.judgels.gabriel.GradingLanguageRegistry
+@import com.google.common.base.Joiner
 
 @if(play.mvc.Controller.flash("submissionError") != null) {
     <div class="alert alert-danger" role="alert">@{play.mvc.Controller.flash("submissionError")}</div>
@@ -25,6 +26,7 @@
 
     @b3.hidden("engine", engine)
     @b3.hidden("gradingLastUpdateTime", gradingLastUpdateTime)
+    @b3.hidden("sourceFileFieldKeys", Joiner.on(",").join(config.getSourceFileFields.keySet))
 
     @for((k, v) <- config.getSourceFileFields) {
         <div class="form-group">
