Reflect changed method names

--- a/app/org/iatoki/judgels/sandalphon/commons/views/blackBoxViewSubmissionView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/commons/views/blackBoxViewSubmissionView.scala.html
@@ -84,8 +84,8 @@
                             }</td>
                             <td>@testCaseResult.getVerdict.getName</td>
                             <td>@testCaseResult.getScore</td>
-                            <td>@testCaseResult.getDetails.getTimeInMilliseconds ms</td>
-                            <td>@testCaseResult.getDetails.getMemoryInKilobytes KB</td>
+                            <td>@testCaseResult.getExecutionResult.getTimeInMilliseconds ms</td>
+                            <td>@testCaseResult.getExecutionResult.getMemoryInKilobytes KB</td>
                             @if(details.getSubtaskResults.get(0).getId != -1) {
                                 <td>@Joiner.on(", ").join(testCaseResult.getSubtaskIds)</td>
                             }
@@ -135,8 +135,8 @@
                             }</td>
                             <td>@testCaseResult.getVerdict.getName</td>
                             <td>@testCaseResult.getScore</td>
-                            <td>@testCaseResult.getDetails.getTimeInMilliseconds ms</td>
-                            <td>@testCaseResult.getDetails.getMemoryInKilobytes KB</td>
+                            <td>@testCaseResult.getExecutionResult.getTimeInMilliseconds ms</td>
+                            <td>@testCaseResult.getExecutionResult.getMemoryInKilobytes KB</td>
                             @if(details.getSubtaskResults.get(0).getId != -1) {
                                 <td>@for(id <- testCaseResult.getSubtaskIds) {
                                     <span class="badge">@id</span>
