--- a/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewSubmissionView.scala.html
+++ b/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewSubmissionView.scala.html
@@ -1,4 +1,4 @@
-@(submission: org.iatoki.judgels.gabriel.commons.Submission, details: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingResultDetails, sourceFiles: Map[String, org.iatoki.judgels.gabriel.blackbox.SourceFile], jidCacheService: org.iatoki.judgels.commons.AbstractJidCacheService[_], problemAlias: String, gradingLanguageName: String, contestName: String)
+@(submission: org.iatoki.judgels.gabriel.commons.Submission, details: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingResultDetails, sourceFiles: Map[String, org.iatoki.judgels.gabriel.blackbox.SourceFile], authorName: String, problemAlias: String, problemName: String, gradingLanguageName: String, contestName: String)
 
 @import org.iatoki.judgels.commons.JudgelsUtils
 
@@ -16,10 +16,10 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Author</td><td>@jidCacheService.getDisplayName(submission.getAuthorJid)</td>
+                    <td>Author</td><td>@authorName</td>
                 </tr>
                 <tr>
-                    <td>Problem</td><td>@if(problemAlias != null) { @problemAlias - } @jidCacheService.getDisplayName(submission.getProblemJid)</td>
+                    <td>Problem</td><td>@if(problemAlias != null) { @problemAlias - } @problemName</td>
                 </tr>
                 @if(contestName != null) {
                     <tr>
