Show submission and grading JIDs in submission view

--- a/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewSubmissionView.scala.html
+++ b/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewSubmissionView.scala.html
@@ -38,6 +38,12 @@
                 <tr>
                     <td>Time</td><td>@JudgelsUtils.formatDate(submission.getTime)</td>
                 </tr>
+                <tr>
+                    <td>JID</td><td>@submission.getJid</td>
+                </tr>
+                <tr>
+                    <td>Grading JID</td><td>@submission.getLatestGradingJid</td>
+                </tr>
             </tbody>
         </table>
     </div>
