--- a/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewStatementView.scala.html
+++ b/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewStatementView.scala.html
@@ -1,4 +1,4 @@
-@(postSubmitUri: String, name: String, statement: String, config: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingConfig, engine: String, allowedGradingLanguageNames: Set[String])
+@(postSubmitUri: String, name: String, statement: String, config: org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingConfig, engine: String, allowedGradingLanguageNames: Set[String], isAllowedToSubmit: Boolean)
 
 @import play.i18n.Messages
 @import org.iatoki.judgels.gabriel.GradingLanguageRegistry
@@ -24,32 +24,38 @@
 
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-2", "col-md-10") }
 
-@b3.form(play.api.mvc.Call("POST", postSubmitUri), 'enctype->"multipart/form-data") {
+@if(play.mvc.Controller.flash("submissionInfo") != null) {
+    <div class="alert alert-danger" role="alert">@{play.mvc.Controller.flash("submissionInfo")}</div>
+}
 
-    @b3.hidden("engine", engine)
-    @b3.hidden("sourceFileFieldKeys", Joiner.on(",").join(config.getSourceFileFields.keySet))
+@if(isAllowedToSubmit) {
+    @b3.form(play.api.mvc.Call("POST", postSubmitUri), 'enctype->"multipart/form-data") {
 
-    @for((k, v) <- config.getSourceFileFields) {
+        @b3.hidden("engine", engine)
+        @b3.hidden("sourceFileFieldKeys", Joiner.on(",").join(config.getSourceFileFields.keySet))
+
+        @for((k, v) <- config.getSourceFileFields) {
+            <div class="form-group">
+                <label for="@k" class="col-md-2">@v</label>
+                <div class="col-md-10">
+                    <input type="file" name="@k">
+                </div>
+            </div>
+        }
+
         <div class="form-group">
-            <label for="@k" class="col-md-2">@v</label>
-            <div class="col-md-10">
-                <input type="file" name="@k">
+            <label for="language" class="col-sm-2 control-label">Language</label>
+            <div class="col-sm-10">
+                <select name="language">
+                    @for((k, v) <- GradingLanguageRegistry.getInstance().getGradingLanguages) {
+                        @if(allowedGradingLanguageNames.contains(k)) {
+                            <option value="@k">@v</option>
+                        }
+                    }
+                </select>
             </div>
         </div>
+
+        @b3.submit('class -> "btn btn-primary") { @Messages.get("Submit") }
     }
-
-    <div class="form-group">
-        <label for="language" class="col-sm-2 control-label">Language</label>
-        <div class="col-sm-10">
-            <select name="language">
-                @for((k, v) <- GradingLanguageRegistry.getInstance().getGradingLanguages) {
-                    @if(allowedGradingLanguageNames.contains(k)) {
-                        <option value="@k">@v</option>
-                    }
-                }
-            </select>
-        </div>
-    </div>
-
-    @b3.submit('class -> "btn btn-primary") { @Messages.get("Submit") }
 }
