Show internal error message (if any) in submission view
Part of ia-toki/judgels#111

--- a/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewSubmissionView.scala.html
+++ b/app/org/iatoki/judgels/gabriel/commons/views/blackBoxViewSubmissionView.scala.html
@@ -49,6 +49,10 @@
     </div>
 </div>
 
+@if(details != null && details.getErrorMessage != null) {
+    <h4>Error Message</h4>
+    <pre>@details.getErrorMessage</pre>
+}
 
 @if(details != null && details.getSubtaskResults.size >= 1 && details.getSubtaskResults.get(0).getId != -1) {
     <h4>Subtask Results</h4>
