display relative DateTime in all judgels applications
part of ia-toki/judgels#128

--- a/app/org/iatoki/judgels/sandalphon/commons/views/blackBoxViewSubmissionView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/commons/views/blackBoxViewSubmissionView.scala.html
@@ -36,7 +36,7 @@
                     <td>Score</td><td>@submission.getLatestScore</td>
                 </tr>
                 <tr>
-                    <td>Time</td><td>@JudgelsUtils.formatDate(submission.getTime)</td>
+                    <td>Time</td><td><time class="display-time" datetime="@JudgelsUtils.formatISOUTCDateTime(submission.getTime.getTime)">@JudgelsUtils.formatDetailedDateTime(submission.getTime.getTime)</time></td>
                 </tr>
                 <tr>
                     <td>JID</td><td>@submission.getJid</td>
